--- a/ProductStore/Views/Product/Index.cshtml
+++ b/ProductStore/Views/Product/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h1 class="text-center mb-5">List of Products</h1>
 
-<a class="btn btn-primary" asp-action="Create" asp-controller="Products">Add Product</a>
+<a class="btn btn-primary" asp-action="Create" asp-controller="Product">Add Product</a>
 
 <div class="row mb-5"></div>
 
